--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
     "welcome": "Transforming Education for the Future",
     "description1": "Empower the next generation with MyWebClass.org - where we revolutionize education through Agile and Lean principles. Nurture creativity, adaptability, and collaboration in students to help them excel in the AI-driven world. Join us in shaping the future of education and unlock the full potential of every learner.",
-    "description2": ""
+    "description2": "Designed to provide teachers with the resources they need to effectively teach web technologies."
   }
   
