fixed text translation

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,5 +1,5 @@
 {
-    "welcome": "Bienvenue sur MyWebClass",
+    "welcome": "Transformer l'éducation pour l'avenir",
     "description1": "Une plateforme en ligne pour les enseignants pour apprendre et enseigner le développement web!",
     "description2": "Conçu pour fournir aux enseignants les ressources dont ils ont besoin pour enseigner efficacement les technologies Web."
   }
